@@ -67,6 +67,8 @@ if (empty($threadCollection)) {
         'disThread.sticky',
         'disThread.locked',
         'disThread.post_last',
+        'disThread.post_answer',
+        'disThread.class_key',
         '(SELECT GROUP_CONCAT(pAuthor.id)
             FROM '.$modx->getTableName('disPost').' AS pPost
             INNER JOIN '.$modx->getTableName('disUser').' AS pAuthor ON pAuthor.id = pPost.author
