@@ -53,6 +53,7 @@ $_lang['discuss.ban_user_header'] = 'Ban User: [[+username]]';
 $_lang['discuss.ban_username'] = 'By Username';
 $_lang['discuss.ban_username_desc'] = 'A username pattern to ban from. May use % as a wildcard.';
 $_lang['discuss.banned'] = 'Banned';
+$_lang['discuss.best_answer'] = 'Best Answer';
 $_lang['discuss.board'] = 'Board';
 $_lang['discuss.board_all'] = '(All Boards)';
 $_lang['discuss.board_is_locked'] = ' (Locked)';
@@ -67,6 +68,7 @@ $_lang['discuss.close'] = 'Close';
 $_lang['discuss.close_bar'] = 'Close Bar';
 $_lang['discuss.date_registered'] = 'Date Registered';
 $_lang['discuss.days'] = 'days';
+$_lang['discuss.discussion'] = 'Discussion';
 $_lang['discuss.downloaded_times'] = 'Downloaded [[+num]] times.';
 $_lang['discuss.email'] = 'Email';
 $_lang['discuss.email_author'] = 'Email Author';
@@ -83,6 +85,7 @@ $_lang['discuss.login'] = 'Login';
 $_lang['discuss.login_err'] = 'The username or password you entered is incorrect. Please check the username, re-type the password, and try again.';
 $_lang['discuss.logout'] = 'Logout';
 $_lang['discuss.mark_all_as_read'] = 'Mark ALL Messages as Read';
+$_lang['discuss.mark_as_answer'] = 'Mark As Answer';
 $_lang['discuss.mark_read'] = 'Mark Read';
 $_lang['discuss.mark_unread'] = 'Mark Unread';
 $_lang['discuss.message'] = 'Message';
@@ -115,6 +118,7 @@ $_lang['discuss.post_spam'] = 'Is Spam';
 $_lang['discuss.posted_on'] = 'Posted On';
 $_lang['discuss.posts'] = 'Posts';
 $_lang['discuss.print'] = 'Print';
+$_lang['discuss.question_and_answer'] = 'Question and Answer';
 $_lang['discuss.quote'] = 'Quote';
 $_lang['discuss.recent_posts'] = 'Recent Posts';
 $_lang['discuss.register'] = 'Register';
@@ -138,6 +142,7 @@ $_lang['discuss.search_forums'] = 'Search Forums';
 $_lang['discuss.search_no_results'] = 'No results found.';
 $_lang['discuss.send_pm'] = 'Send a Private Message';
 $_lang['discuss.show_email'] = 'Show Email to Public';
+$_lang['discuss.solved'] = 'Solved';
 $_lang['discuss.stats'] = 'Stats';
 $_lang['discuss.stats_latest_post'] = 'Latest Post: [[+post]] by [[+by]]';
 $_lang['discuss.stats_totals'] = '[[+posts]] posts in [[+threads]] threads by [[+members]] members.';
@@ -160,11 +165,13 @@ $_lang['discuss.thread_send'] = 'Send Thread';
 $_lang['discuss.thread_spam'] = 'Mark Thread as Spam';
 $_lang['discuss.thread_spam_confirm'] = 'Are you sure you want to move the thread, "[[+title]]", to the Spam Box?';
 $_lang['discuss.thread_stick'] = 'Sticky Thread';
+$_lang['discuss.thread_type'] = 'Thread Type';
 $_lang['discuss.thread_unlock'] = 'Unlock Thread';
 $_lang['discuss.thread_unstick'] = 'Unstick Thread';
 $_lang['discuss.thread_viewing'] = '[[+members]] and [[+guests]] guests are viewing this thread.';
 $_lang['discuss.title'] = 'Title';
 $_lang['discuss.track_ip'] = 'Track IP';
+$_lang['discuss.unmark_as_answer'] = 'Un-mark As Answer';
 $_lang['discuss.unread_posts'] = 'Unread Posts';
 $_lang['discuss.unread_posts_all'] = 'View All Unread Posts';
 $_lang['discuss.unread_posts_last_visit'] = 'Unread Posts Since Last Visit';
